UPDATE use new java version, new UseCGroupMemoryLimitForHeap for dynamic JVM memory allocation in Docker container, lightweight -alpine jdk container